--- a/src/sass/_base.scss
+++ b/src/sass/_base.scss
@@ -30,11 +30,52 @@ body {
   font-family: "DM Sans", sans-serif;
   font-weight: 400;
   line-height: 1.7;
-  // color: $color-grey;
-  padding: 0 3rem;
   box-sizing: border-box;
 }
 
-.hidden{
-  display: none!important;
+.hidden {
+  display: none !important;
+}
+
+.container {
+  max-width: 140rem;
+  margin: auto;
+}
+
+.heading_1 {
+  font-size: 2.3rem;
+  text-transform: uppercase;
+  color: #d6a85a;
+}
+.section_tag {
+  margin-top: 2rem;
+  font-size: 4.6rem;
+  line-height: 5rem;
+  font-weight: bold;
+  &__special {
+    position: relative;
+    &::after {
+      display: inline-block;
+      position: absolute;
+      top: 30px;
+      left: 0;
+      content: "";
+      width: 100%;
+      background-color: #ffd7a8;
+      height: 10px;
+      z-index: -1;
+    }
+  }
+}
+.section_details {
+  font-size: 1.8rem;
+  margin-top: 1rem;
+}
+
+.main_button {
+  border: 1px solid #333333;
+  border-radius: 5px;
+  padding: 1.4rem 2.4rem;
+  font-size: 1.6rem;
+  margin-top: 2rem;
 }
