--- a/src/sass/_navigation.scss
+++ b/src/sass/_navigation.scss
@@ -10,6 +10,11 @@
     &__brand-name {
       font-size: 3rem;
       font-weight: bold;
+      & > * {
+        text-decoration: none;
+        color: white;
+
+      }
     }
   }
   &_left {
