--- a/src/App.scss
+++ b/src/App.scss
@@ -1,4 +1,5 @@
-@import './sass/base';
-@import './sass/navigation';
-@import './sass/hero';
-@import './sass/about'
+@import "./sass/base";
+@import "./sass/navigation";
+@import "./sass/hero";
+@import "./sass/about";
+@import "./sass/services";
