--- a/src/sass/_hero.scss
+++ b/src/sass/_hero.scss
@@ -28,10 +28,27 @@
     }
   }
 }
+@media screen and (max-width: 600px) {
+  .hero {
+    &_mainLine {
+      font-size: 10rem;
+    }
+  }
+}
 @media screen and (max-width: 500px) {
   .hero {
     &_mainLine {
       font-size: 8rem;
+    }
+  }
+}
+@media screen and (max-width: 350px) {
+  .hero {
+    &_mainLine {
+      font-size: 6rem;
+    }
+    &_tagline {
+      font-size: 1.5rem;
     }
   }
 }
